# research-portal-harness

./: .gitignore  README.md  pyproject.toml
examples/: brokers.example.json  tasks.example.json
installer/: install.sh
skills/research-portal-harness/: SKILL.md
skills/research-portal-harness/agents/: openai.yaml
skills/research-portal-harness/references/: auth_and_2fa.md  compliance_guardrails.md  onboarding_flow.md  portal_patterns.md  portal_recipe_schema.md
skills/research-portal-harness/scripts/: check_environment.py  init_workspace.py  validate_portal_config.py
src/research_portal_harness/: __init__.py  cli.py  common.py  doctor.py  indexer.py  manifest.py  mock_portal.py  portal.py  safety.py  workspace.py
tests/: test_cli.py  test_mock_portal.py  test_workspace_and_manifest.py
