[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "research-portal-harness"
version = "0.1.0"
description = "Local execution layer for subscribed research portal acquisition."
requires-python = ">=3.9"
dependencies = [
  "beautifulsoup4>=4.12",
  "openpyxl>=3.1",
  "playwright>=1.45.0",
  "pymupdf>=1.24",
  "typer>=0.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
rph = "research_portal_harness.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

